fix(track-08/wp-01): Phase 7 functional review fixes
Three must-fixes from the multi-dimensional review gate:

1. DataSourceIdMinterTest: replace deprecated `new Locale("tr","TR")`
   with `Locale.of("tr","TR")`. The two-arg Locale constructor is
   @Deprecated(since="19"); a JDK 25 project should not be born using
   deprecated APIs.

2. VendorScopedView: enforce `vendorServicesCount == vendorServices.size()`
   in the compact constructor, mirroring DataSourceDetail's
   `integrationsCount == integrations.size()` invariant. The asymmetry
   between the two records was a bug-trap: RFC §/vendors/{vendor_id}
   returns vendor_services[] with vendorServicesCount derived from it,
   so the two should not diverge. Adds a dedicated test for the new
   IAE branch.

3. DataSourceIdMinter: swap `.isEmpty()` → `.isBlank()` for productName.
   A whitespace-only productName ("   ") would pass the previous check
   then become "---" after the space-replace, producing a malformed
   slug. Updates the existing empty-rejection test and adds a new
   whitespace-only test.

`./mvnw verify` BUILD SUCCESS (303 tests, 0 failures).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>